// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders button disabled 1`] = `
<WithStyles(ForwardRef(Container))
  component="main"
  maxWidth="xs"
>
  <WithStyles(CssBaseline) />
  <div
    className="makeStyles-appBarSpacer-1"
  />
  <div
    className="makeStyles-paper-3"
  >
    <WithStyles(ForwardRef(Typography))
      component="h1"
      variant="h5"
    >
      Add Stairs
    </WithStyles(ForwardRef(Typography))>
    <form
      className="makeStyles-form-5"
      noValidate={true}
      onSubmit={[Function]}
    >
      <WithStyles(ForwardRef(TextField))
        defaultValue="1"
        fullWidth={true}
        id="stairs"
        label="Stairs"
        margin="normal"
        name="stairs"
        required={true}
        variant="outlined"
      />
      <WithStyles(ForwardRef(Button))
        className="makeStyles-submit-6"
        color="primary"
        disabled={true}
        fullWidth={true}
        type="submit"
        variant="contained"
      >
        Add
      </WithStyles(ForwardRef(Button))>
    </form>
  </div>
</WithStyles(ForwardRef(Container))>
`;

exports[`renders correctly 1`] = `
<WithStyles(ForwardRef(Container))
  component="main"
  maxWidth="xs"
>
  <WithStyles(CssBaseline) />
  <div
    className="makeStyles-appBarSpacer-1"
  />
  <div
    className="makeStyles-paper-3"
  >
    <WithStyles(ForwardRef(Typography))
      component="h1"
      variant="h5"
    >
      Add Stairs
    </WithStyles(ForwardRef(Typography))>
    <form
      className="makeStyles-form-5"
      noValidate={true}
      onSubmit={[Function]}
    >
      <WithStyles(ForwardRef(TextField))
        defaultValue="1"
        fullWidth={true}
        id="stairs"
        label="Stairs"
        margin="normal"
        name="stairs"
        required={true}
        variant="outlined"
      />
      <WithStyles(ForwardRef(Button))
        className="makeStyles-submit-6"
        color="primary"
        disabled={false}
        fullWidth={true}
        type="submit"
        variant="contained"
      >
        Add
      </WithStyles(ForwardRef(Button))>
    </form>
  </div>
</WithStyles(ForwardRef(Container))>
`;
